--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -15,13 +15,12 @@ const headings = [
 ---
 
 <PageLayout title='About' {headings} info='/about'>
-  <p>Developer / Designer</p>
+  <p>Developer / Student</p>
   <p>
-    Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum
-    dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio
-    possit voluptatum.
+    Full-time undergraduate student majoring in Intelligence Science and Technology, skilled in big
+    data and full-stack web development. Passionate about UI/UX design during leisure time.
   </p>
-  <p>My motto: Stay hungry, Stay foolish. <Spoiler>这里可以夹私货</Spoiler></p>
+  <p>My motto: Stay hungry, Stay foolish. <Spoiler>求知若愚，虚怀若谷。</Spoiler></p>
   <Button title='Sponsor Me' class='w-fit' href='/projects#sponsorship' style='ahead' />
 
   {/* general-talk */}
@@ -139,15 +138,15 @@ const headings = [
         href: 'https://ubuntu.com/',
         icon: import('@/assets/tools/ubuntu.svg?raw')
       },
-      {
-        name: 'MacOS Sonoma',
-        description: 'MacBook Air',
-        href: 'https://www.apple.com/macos/',
-        icon: import('@/assets/tools/apple.svg?raw')
-      },
+      // {
+      //   name: 'MacOS Sonoma',
+      //   description: 'MacBook Air',
+      //   href: 'https://www.apple.com/macos/',
+      //   icon: import('@/assets/tools/apple.svg?raw')
+      // },
       {
         name: 'Windows 11',
-        description: 'Rog Strix G15',
+        description: 'ThinkBook 16 G6+ IMH',
         href: 'https://news.microsoft.com/windows11-general-availability/',
         icon: import('@/assets/tools/windows11.svg?raw')
       }
@@ -165,9 +164,9 @@ const headings = [
       {
         platform: 'GitHub',
         icon: 'github',
-        link: 'https://github.com/cworld1',
+        link: 'https://github.com/bi-zx',
         text: 'followers',
-        api: 'github/cworld1'
+        api: 'github/bi-zx'
       },
       {
         platform: 'Telegram',
@@ -176,28 +175,33 @@ const headings = [
         link: 'https://t.me/cworld0_cn',
         text: 'subscribers',
         api: 'telegram/cworld0_cn'
-      },
-      {
-        platform: 'Weibo',
-        icon: 'weibo',
-        color: '#e71f19',
-        link: 'https://weibo.com/cworld0',
-        text: 'followers',
-        api: 'weibo/5501674056'
-      },
-      {
-        platform: 'Steam',
-        icon: 'steam',
-        color: '#50769d',
-        link: 'https://steamcommunity.com/id/cworld',
-        text: 'games',
-        api: 'steamgames/76561199021278120'
       }
+      // {
+      //   platform: 'Weibo',
+      //   icon: 'weibo',
+      //   color: '#e71f19',
+      //   link: 'https://weibo.com/cworld0',
+      //   text: 'followers',
+      //   api: 'weibo/5501674056'
+      // },
+      // {
+      //   platform: 'Steam',
+      //   icon: 'steam',
+      //   color: '#50769d',
+      //   link: 'https://steamcommunity.com/id/cworld',
+      //   text: 'games',
+      //   api: 'steamgames/76561199021278120'
+      // }
     ]}
   />
 
   {/* gossips */}
   <h2 id='gossips'>Gossips</h2>
+  <Collapse title='Some history about your avatar?'>
+    Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum
+    dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio
+    possit voluptatum.
+  </Collapse>
   <Collapse title='Lorem ipsum'>
     Lorem ipsum dolor sit amet, vidit suscipit at mei. Quem denique mea id. Usu ei regione indoctum
     dissentiunt, cu meliore fuisset mei, vel quod voluptua ne. Ex dicat impedit mel, at eum oratio
@@ -210,18 +214,27 @@ const headings = [
   <Timeline
     events={[
       {
-        date: '2024-04-29',
+        date: '2021-05-17',
+        content: 'Website sprouted up and started using Gridea to build the blog'
+      },
+      {
+        date: '2021-05-17',
+        content: 'Website has been deployed the first version on Github Pages'
+      },
+      {
+        date: '2024-10-12',
+        content:
+          'Got my first domain in life <a href="https://feiyu05.us.kg/" target="_blank">feiyu05.us.kg</a>'
+      },
+      {
+        date: '2025-02-12',
         content:
           'Website refectered using <a href="https://astro.build/" target="_blank">Astro</a> and <a href="https://github.com/srleom/astro-theme-resume" target="_blank">Astro Theme Resume</a>'
       },
       {
-        date: '2024-07-26',
+        date: '2025-02-21',
         content:
-          'Website abstracted as a theme and published on <a href="https://github.com/cworld1/astro-theme-pure"target="_blank">Github</a>'
-      },
-      {
-        date: '2024-07-27',
-        content: 'Writed website docs'
+          'Bought new domain <a href="https://feiyu05.top"target="_blank">feiyu05.top</a> with new redesigned theme <a href="https://github.com/cworld1/astro-theme-pure"target="_blank">Astro Theme Pure</a>'
       }
     ]}
   />
