Configure Comment System

--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -25,7 +25,7 @@ const headings = [
   <p>Github Activities:</p>
   <p>
     <Image
-      src='https://ghchart.rshah.org/659eb9/cworld1'
+      src='https://ghchart.rshah.org/659eb9/bi-zx'
       alt='github activities'
       inferSize
       loading='lazy'
@@ -129,9 +129,9 @@ const headings = [
   <ProjectSection
     project={[
       {
-        name: 'CWorld',
-        description: "CWorld's Github",
-        links: [{ type: 'github', href: 'https://github.com/cworld1' }]
+        name: 'Feiyu',
+        description: "Feiyu's Github",
+        links: [{ type: 'github', href: 'https://github.com/bi-zx' }]
       },
       {
         name: 'Arthals',
@@ -177,10 +177,8 @@ const headings = [
   <p>Thanks to the following sponsors:</p>
   <Sponsors
     sponsors={[
-      { name: 'C*a（酷安@暴走の蜗牛）', amount: '2.00', date: '2019-07-02' },
-      { name: '华雄(QQ：1300****71)', amount: '5.00', date: '2019-12-30' },
-      { name: '◌(QQ：1934****45)', amount: '3.00', date: '2019-12-30' },
-      { name: 'Anonymous', amount: '20.00', date: '2022-04-06' }
+      { name: '-', amount: '3.00', date: '2019-12-30' },
+      { name: '-', amount: '20.00', date: '2022-04-06' }
     ]}
   />
 </PageLayout>
